@@ -56,7 +56,7 @@ DESCRIPTION
 
     "^D": Aborts the operation. Returns "undef".
 
-Standard Term::ReadLine Methods and Functions
+Standard Methods and Functions
   ReadLine()
     returns the actual package that executes the commands. If this package
     is used, the value is "Term::ReadLine::Tiny".
@@ -120,25 +120,13 @@ Standard Term::ReadLine Methods and Functions
     *   *changehistory* is present, default "TRUE". See "changehistory"
         method.
 
-Additional Term::ReadLine Methods and Functions
+Additional Methods and Functions
   newTTY([$IN[, $OUT]])
     takes two arguments which are input filehandle and output filehandle.
     Switches to use these filehandles.
 
   ornaments
     This is void implementation. Ornaments is not supported.
-
-Other Methods and Functions
-  readkey([$echo])
-    reads a key from input and echoes if *echo* argument is "TRUE".
-
-    Returns "undef" on "EOF".
-
-  changehistory([$changehistory])
-    If argument is specified, it allows to change history lines when
-    argument value is true.
-
-    Returns the old value.
 
   history([$history])
     If argument is specified and ArrayRef, rewrites all history by argument
@@ -150,6 +138,18 @@ Other Methods and Functions
     values.
 
     Returns copy of the old history in ArrayRef.
+
+  changehistory([$changehistory])
+    If argument is specified, it allows to change history lines when
+    argument value is true.
+
+    Returns the old value.
+
+Other Methods and Functions
+  readkey([$echo])
+    reads a key from input and echoes if *echo* argument is "TRUE".
+
+    Returns "undef" on "EOF".
 
   encode_controlchar($c)
     encodes if argument "c" is a control character, otherwise returns
